--- a/deeplink.html
+++ b/deeplink.html
@@ -48,7 +48,7 @@
 
     $link.addEventListener("click", (event) => {
         event.preventDefault();
-        location.replace("innovation://continue/token=DUMMY");
+        location.replace("albodefi://deeplinkmanager");
     });
 
 </script>
