--- a/deeplink.html
+++ b/deeplink.html
@@ -48,7 +48,7 @@
 
     $link.addEventListener("click", (event) => {
         event.preventDefault();
-        location.replace("albodefi://deeplinkmanager");
+        location.replace("albodefi://deeplinkmanager/access?reference=6AC4018068ECB21EAF3DA50F13085AF7E88CC7FA");
     });
 
 </script>
