--- a/deeplink.html
+++ b/deeplink.html
@@ -48,7 +48,7 @@
 
     $link.addEventListener("click", (event) => {
         event.preventDefault();
-        location.replace("mktp://deeplinkManager?action=home");
+        location.replace("albo://thirdParty/abea");
     });
 
 </script>
