--- a/deeplink.html
+++ b/deeplink.html
@@ -48,7 +48,7 @@
 
     $link.addEventListener("click", (event) => {
         event.preventDefault();
-        location.replace("albo://thirdParty/abea");
+        location.replace("albo://thirdParty/abea?route=/thirdparty/abea/openmarket");
     });
 
 </script>
